--- a/fe/index.html
+++ b/fe/index.html
@@ -6,17 +6,13 @@
     <title>Gestionale Iliad</title>
 
     <!-- Favicon -->
-    <link rel="icon" type="image/png" href="/iliad-logo.png" />
-    <link rel="icon" type="image/png" sizes="32x32" href="/iliad-logo.png" />
-    <link rel="apple-touch-icon" href="/iliad-logo.png" />
+    <link rel="icon" type="image/png" href="/iliad-icon-32x32.png" />
+    <link rel="icon" type="image/png" sizes="32x32" href="/iliad-icon-32x32.png" />
+    <link rel="apple-touch-icon" href="/iliad-icon-192x192.png" />
     <meta name="theme-color" content="#E60012" />
     <link rel="manifest" href="/manifest.json" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;300;400;500;700;900&display=swap"
-      rel="stylesheet"
-    />
-    <link
-      href="https://cdn.jsdelivr.net/npm/@mdi/font@7.4.47/css/materialdesignicons.min.css"
       rel="stylesheet"
     />
   </head>
